--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,7 +58,7 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: localhost
+    host: 47.102.215.228
     # 端口，默认为6379
     port: 6379
     # 密码
